gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adminer-route
  namespace: eks-lab

spec:
  parentRefs:
    - name: adminer-gateway

  rules:
    - backendRefs:
        - name: adminer
          port: 8080
